# super-duper-octo-spork

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  index.html
.claude/: settings.local.json
.githooks/: pre-commit
.ralph/: guardrails.md  progress-api.md  progress.md
diagnostics/: probe_position_sensitivity.py
docs/: ABILITY_PRIORITY_SYSTEM.md  ABILITY_SYSTEM.md  ARCHITECTURE.md  LOL_CONVERSION_PLAN.md  MONTE_CARLO_PLAN.md  STUDENT_MODEL_APPROACH.md  SYSTEMS.md  TRANSFORMER_TRAINING_LOG.md  entry_room_samples.txt  grokking_training_plan.md
scenarios/: attrition_4v4_hard.toml  basic_4v4.toml  bench_30units.toml  boss_rush_6v2.toml  climax_boss.toml  climax_solo_1v2.toml  duel_1v1.toml  easy_warmup_4v3.toml  elite_squad.toml  escort_5v7.toml  even_6v6.toml  full_roster_8v8.toml  glass_cannon_2v4.toml  healer_heavy_4v6.toml  hvh_healer_war.toml  hvh_healer_war2.toml  hvh_test.toml  knife_edge_4v5_hard.toml  outnumbered_2v6.toml  pressure_room.toml  skirmish_3v3.toml  steamroll_6v3.toml  swarm_3v8.toml  zerg_rush_4v10.toml
scripts/: bootstrap_training.sh  build_anim_map.py  capture_windows.cmd  capture_windows.ps1  dedupe_capture.ps1  ec4_multi_epoch.sh  ec5_low_lr.sh  ec6_mid_lr.sh  ec7_kl_penalty.sh  ec8_selfplay.sh  extract_lol_models.py  fetch_lol_champions.py  gauntlet.sh  gen_training_scenarios.py  gru_mixed_pool.sh  label_abilities.py  label_abilities_retry.py  lol_to_toml.py  map_prompt_template.txt  plot_nextstate.py  ppo_curriculum.sh  ppo_loop_v2.sh  sac_selfplay.sh  selfplay_loop.sh  setup-hooks.sh  toml_to_ability.py  train_ability_encoder.py  train_ability_eval.py  train_raw_supervised.py  train_selfplay.py  train_student.py
src/: app_systems.rs  audio.rs  camera.rs  cli_args.rs  (+13 more)
(+24382 files in other folders)
